# gitCICD-cmake

./: CMakeLists.txt
.github/workflows/: CD.yml  CI.yml
cmake/: FirstOrganizedCMakeConfig.h.in
mains/: CMakeLists.txt  hello.cpp
src/log_lib/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt
